Feature/log deletion (#3)
* Log deletion and java 17 compatability, 3.1.4 spring

* bugfix

* Removed dependencies and added comments

* Added javadoc

* Changed name to logRetentionLengthInDays and added applicationName property

* Fixed variable name

* Returned the deleted values

* Update to values

* Update to values

* bugfixing

* naming and docs

* Light refactor

---------

Co-authored-by: c.tfiolic <c.tfiolic@site.sa>
Co-authored-by: sebastian_pavunc <sebastian.pavunc.asseco@internationalvalueservices.com>
Co-authored-by: Sebastian Pavunc <sebastianpavunc@gmail.com>